Closed Bug 1332584 Opened 9 years ago Closed 9 years ago

MediaRecorder doesn't record the last frame of a video track

Categories

(Core :: Audio/Video: Recording, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: pehrsons, Assigned: pehrsons)

References

Details

Attachments

(2 files)

No description provided.
Rank: 25
Priority: -- → P2
Comment on attachment 8828791 [details] Bug 1332584 - Append last frame on EOS in VideoTrackEncoder. https://reviewboard.mozilla.org/r/106074/#review107050 ::: dom/media/encoder/TrackEncoder.cpp:410 (Diff revision 1) > + RateConvertTicksRoundUp(PR_USEC_PER_SEC, mTrackRate, > + mLastChunk.mDuration) / 1000000.0)); wouldn't the last constant also be PR_USEC_PER_SEC?
Attachment #8828791 - Flags: review?(rjesup) → review+
These both fixes the issue in this try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=8dc6c08e8ed6 and moves away from PR_USEC_TO_SEC to address your last comment.
Attachment #8828791 - Flags: review+ → review?(rjesup)
Attachment #8828909 - Flags: review?(rjesup) → review+
Comment on attachment 8828791 [details] Bug 1332584 - Append last frame on EOS in VideoTrackEncoder. https://reviewboard.mozilla.org/r/106074/#review107136
Attachment #8828791 - Flags: review?(rjesup) → review+
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/17f78bed73c2 Append last frame on EOS in VideoTrackEncoder. r=jesup https://hg.mozilla.org/integration/mozilla-inbound/rev/3be7e027a50b Use time conversion utils from VideoUtils. r=jesup
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
See Also: → 1333271
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: