Bug 1332584 - Append last frame on EOS in VideoTrackEncoder. r=jesup

MozReview-Commit-ID: LARhY0LAEtG

--HG--
extra : rebase_source : 9f08a9a7fab52f14a8f140711fb9355d8039cd79
extra : source : 72bcbe049bcbca33e613508f5a63e691c0110ee4